--- a/developer.html
+++ b/developer.html
@@ -1,9 +1,26 @@
 <!-- مائل ولونه أحمر p قم بجعل النص داخل وسم -->
 
 <!-- class مرة باستخدام -->
-<p>رائع CSS و HTML أنا مطور</p>
+<!-- <p>رائع CSS و HTML أنا مطور</p> -->
 
 <!-- id ومرة باستخدام -->
-<p>رائع CSS و HTML أنا مطور</p>
+<!-- <p>رائع CSS و HTML أنا مطور</p> -->
 
 <!-- stylesheet لا تنسى إنشاء ملف  -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LooL</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <p class="first">رائع CSS و HTML أنا مطور</p>
+
+
+    <p id="sec">رائع CSS و HTML أنا مطور</p>
+
+</body>
+</html>
